# python-template-rye

./: pyproject.toml
src/common/: configs.py
tests/sub/: test_sub.py
