[project]
name = "python-template-rye"
version = "0.1.0"
description = "Ryeを使ったPythonプロジェクトテンプレート"
authors = [
    { name = "yoneya.takashi", email = "takashi002013@gmail.com" }
]
dependencies = ["ruff~=0.0.270", "mypy~=1.3.0", "pydantic[dotenv]~=1.10.8", "black~=23.3.0", "pyyaml~=6.0", "python-json-logger~=2.0.7", "pytest~=7.3.1", "pre-commit~=3.3.2"]
readme = "README.md"
requires-python = ">= 3.10"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true

[tool.hatch.metadata]
allow-direct-references = true

[tool.ruff]
# ref: https://qiita.com/yuji38kwmt/items/63e82126076204923520
exclude = [".venv"]
ignore = [
  "G004", # `logging-f-string`
  "PLC1901", # compare-to-empty-string
  "PLR2004", # magic-value-comparison
  "ANN101", # missing-type-self
  "ANN102", # missing-type-cls
  "ANN002", # missing-type-args
  "ANN003", # missing-type-kwargs
  "ANN401", # any-type
  "ERA", # commented-out-code
  "ARG002", # unused-method-argument
  "INP001", # implicit-namespace-package
  "PGH004", # blanket-noqa
  "B008", # Dependsで使用するため
  "A002", # builtin-argument-shadowing
  "A003", # builtin-attribute-shadowing
  "PLR0913", # too-many-arguments
  "RSE", # flake8-raise
  "D", # pydocstyle
  "C90", # mccabe
  "T20", # flake8-print
  "SLF", #  flake8-self
  "BLE", # flake8-blind-except
  "FBT", # flake8-boolean-trap
  "TRY", # tryceratops
  "COM", # flake8-commas
  "S", # flake8-bandit
  "EM", #flake8-errmsg
  "EXE", # flake8-executable
  "ICN", # flake8-import-conventions
  "RET", #flake8-return
  "SIM", #flake8-simplify
  "TCH", # flake8-type-checking
  "ISC", #flake8-implicit-str-concat
  "N", # pep8-naming
  "PT", # flake8-pytest-style
  "E501", # We currently use black to check line-length (E501), and ignore E501 in Ruff.
]
select = ["ALL"]
src = ["src", "tests"]
target-version = "py310"

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]


[tool.black]
# The line-length counting method is different between Black and Ruff.
# See https://github.com/astral-sh/ruff/pull/3714 and https://github.com/psf/black/issues/1197.
line-length = 120

[tool.mypy]
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_calls = true
disallow_untyped_defs = true
ignore_missing_imports = true
namespace_packages = true
no_implicit_optional = true
no_silence_site_packages = true
no_site_packages = true
platform = "linux"
python_version = "3.10"
show_column_numbers = true
show_error_codes = true
show_error_context = true
strict_equality = true
warn_redundant_casts = true
warn_unreachable = true
warn_unused_configs = true
warn_unused_ignores = true
